--- a/index.html
+++ b/index.html
@@ -1,24 +1,54 @@
 <!DOCTYPE html>
-<html>
-<body>
-  <h2>AI Evaluation</h2>
-  <textarea id="userText" style="width:100%;height:120px;"></textarea>
-  <button id="sendBtn">Evaluate</button>
-  <pre id="output"></pre>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>AI Evaluation</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <main class="app">
+      <header class="app-header">
+        <h1>AI Evaluation</h1>
+        <p class="lead">Paste text below and click Evaluate.</p>
+      </header>
 
-  <script>
-    document.getElementById("sendBtn").onclick = async () => {
-      const text = document.getElementById("userText").value;
+      <form id="evalForm" class="eval-form" action="#">
+        <label for="userText" class="sr-only">Input text</label>
+        <textarea id="userText" name="text" class="input-text" placeholder="Enter or paste text to evaluate..."></textarea>
+        <div class="actions">
+          <button id="sendBtn" type="submit" class="btn">Evaluate</button>
+        </div>
+      </form>
 
-      const response = await fetch("/evaluate", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ text })
+      <section class="result">
+        <h2 class="result-title">Output</h2>
+        <pre id="output" class="output-box" aria-live="polite"></pre>
+      </section>
+    </main>
+
+    <script>
+      document.getElementById('evalForm').addEventListener('submit', async (e) => {
+        e.preventDefault();
+        const text = document.getElementById('userText').value;
+
+        try {
+          const response = await fetch('/evaluate', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ text })
+          });
+
+          if (!response.ok) {
+            throw new Error('Network response was not ok');
+          }
+
+          const data = await response.json();
+          document.getElementById('output').textContent = data.result;
+        } catch (err) {
+          document.getElementById('output').textContent = 'Error: ' + (err.message || err);
+        }
       });
-
-      const data = await response.json();
-      document.getElementById("output").textContent = data.result;
-    };
-  </script>
-</body>
+    </script>
+  </body>
 </html>
