--- a/index.html
+++ b/index.html
@@ -23,14 +23,51 @@
 
       <section class="result">
         <h2 class="result-title">Output</h2>
-        <pre id="output" class="output-box" aria-live="polite"></pre>
+        <div id="output" class="output-box" aria-live="polite"></div>
       </section>
     </main>
 
     <script>
+      function escapeHtml(str) {
+        return String(str)
+          .replace(/&/g, '&amp;')
+          .replace(/</g, '&lt;')
+          .replace(/>/g, '&gt;')
+          .replace(/"/g, '&quot;')
+          .replace(/'/g, '&#39;');
+      }
+
+      function formatOutput(raw) {
+        if (!raw) return '';
+        // normalize newlines
+        const s = raw.replace(/\r\n/g, '\n').replace(/\r/g, '\n');
+
+        // split paragraphs by two or more newlines
+        const paras = s.split(/\n{2,}/).map(part => {
+          const lines = part.split('\n');
+
+          // detect simple bullet lists (lines starting with -, *, • or numbered)
+          const isList = lines.every(l => /^\s*([-*•]|\d+\.)\s+/.test(l));
+          if (isList) {
+            const items = lines.map(l => {
+              const m = l.match(/^\s*([-*•]|\d+\.)\s+(.*)/);
+              return '<li>' + escapeHtml(m ? m[2] : l) + '</li>';
+            }).join('');
+            return '<ul class="output-list">' + items + '</ul>';
+          }
+
+          // otherwise convert single newlines to <br> inside a paragraph
+          return '<p class="output-paragraph">' + escapeHtml(part).replace(/\n/g, '<br>') + '</p>';
+        });
+
+        return paras.join('');
+      }
+
       document.getElementById('evalForm').addEventListener('submit', async (e) => {
         e.preventDefault();
         const text = document.getElementById('userText').value;
+        const out = document.getElementById('output');
+        out.innerHTML = '<p class="output-paragraph">Thinking</p>';
 
         try {
           const response = await fetch('/evaluate', {
@@ -44,9 +81,9 @@
           }
 
           const data = await response.json();
-          document.getElementById('output').textContent = data.result;
+          out.innerHTML = formatOutput(data.result);
         } catch (err) {
-          document.getElementById('output').textContent = 'Error: ' + (err.message || err);
+          out.innerHTML = '<p class="output-error">Error: ' + escapeHtml(err.message || String(err)) + '</p>';
         }
       });
     </script>
